--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "react-lottie": "^1.2.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.7",
+    "socket.io-client": "^4.5.1",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
